fixed padding for better readability

--- a/styles.css
+++ b/styles.css
@@ -29,5 +29,5 @@ tr {
 td {
     border-top: 1px solid darkturquoise;
     border-right: 2px solid cornflowerblue;
-    padding-right: 10px;
+    padding: 2px 10px 2px 2px;
 }
